[package]
name = "provider"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
common = {path="/Users/huangzheng/rusts/business/crates/common"}
[dependencies.test-case]
git = "https://github.com/huang12zheng/test-case"


